--- a/index.html
+++ b/index.html
@@ -32,6 +32,80 @@ Group of Architects
         </div>
     </header>
     <main>
+        <!-- Teams Section -->
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="/images/team1.png">
+                <img src="/images/team2.png">
+                <img src="/images/team3.png" alt="">
+                <img src="/images/team4.png" alt="">
+                
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list </span> <spna>of Our</spna> <span class="text-primary">Features</span>
+                </h3>
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+
+        </section>
+        <!-- Features will enjoy -->
+         <section class="">
+            <h3 class="section-title">Features you will love & enjoy
+
+            </h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+
+            </p>
+
+         </section>
+         <!-- SOme Facts -->
+
+          <section class="some-facets">
+            <h3 class="section-title">
+                Some Facts
+            </h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <div class="fact">
+                    <img src="/images/icons/ribon.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">54</h4>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                </div>
+                <div class="fact">
+                    <img src="/images/icons/projects.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">1458</h4>
+                    <h5 class="fact-name">Project Finished</h5>
+                </div>
+                <div class="fact">
+                    <img src="/images/icons/customers.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">590</h4>
+                    <h5 class="fact-name">Clients Worked</h5>
+                </div>
+                <div class="fact">
+                    <img src="/images/icons/email.png" alt="" class="fact-icon">
+                    <h4 class="fact-number">22578</h4>
+                    <h5 class="fact-name">Email Send</h5>
+                </div>
+            </div>
+          </section>
+          <!-- Our Sponsors -->
+
+          <section class="our-sponsors">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="/images/sponsors/amazon.png">
+                <img src="/images/sponsors/google.png">
+                <img src="/images/sponsors/figma.png">
+                <img src="/images/sponsors/spotify.png">
+                <img src="/images/sponsors/telerama.png">
+            </div>
+
+          </section>
 
     </main>
     <footer>
